# apt-mcp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml
.github/workflows/: lint.yml  test.yml
docs/: architecture.md  getting-started.md  security.md
docs/features/: tools.md
src/: audit.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  runtime.rs  sanitize.rs  server.rs  validation.rs
src/apt/: commands.rs  executor.rs  mod.rs
