[package]
name = "apt-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for apt package management on Debian-based Linux"
license = "MIT"
repository = "https://github.com/brianlechthaler/apt-mcp"
readme = "README.md"
keywords = ["mcp", "apt", "debian", "package-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "apt-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
